# PythonProject3

./: .coverage  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html
src/: decorators.py  external_api.py  generators.py  main.py  masks.py  processing.py  readers.py  utils.py  widget.py
src/processing/: processing.py
tests/: test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_readers.py  test_utils.py  test_widget.py
