[tool.poetry]
name = "pythonproject3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py314']

[tool.isort]
profile = "black"
line_length = 119

[tool.mypy]
python_version = "3.14"
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"
strict = true
explicit_package_bases = true