[tool.poetry]
name = "pythonproject3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py314']

[tool.isort]
profile = "black"
line_length = 119

[tool.mypy]
python_version = "3.14"
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"
strict = true
explicit_package_bases = true
[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.20.1,<2.0.0)"
]
